# Thanix

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  Thanix.changes  Thanix.spec  thanix.spec
.forgejo/: PULL_REQUEST_TEMPLATE.md
.forgejo/ISSUE_TEMPLATE/: bug_report.yaml  documentation_change.yaml
.forgejo/workflows/: audit.yml  post_release.yml  style.yml  test.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  feature_request.yaml
.github/workflows/: release.yml  style.yml
.pre-commit-hooks/: audit.sh
.woodpecker/: audit.yml  post_release.yml
src/: bindgen.rs  main.rs  pathgen.rs  paths.rs  structgen.rs  util.rs
src/templates/: Cargo.toml.template  README.md.template  ascii_art.template  build.rs.template  lib.rs.template  path.template  usings.template  util.rs.template
