[package]
name = "thanix"
authors = ["Christopher Hock <christopher-hock@protonmail.com>"]
version = "0.1.0-alpha.2"
publish = true
edition = "2021"
description = "A yaml-to-rust code generator for generating Rust code from yaml config files e.g. as found in openAPI."
readme = "README.md"
repository = "https://github.com/The-Nazara-Project/Thanix"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.2", features = ["derive"]}
convert_case = "0.6.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
