[package]
name = "thanix"
authors = ["Tiara Hock <tiara.dev@proton.me>"]
version = "0.1.0-beta.13"
publish = true
edition = "2024"
description = "A yaml-to-rust code generator for generating Rust code from yaml config files e.g. as found in openAPI."
readme = "README.md"
repository = "https://github.com/The-Nazara-Project/Thanix"
license = "GPL-3.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
check_keyword = "0.2.0"
clap = {version = "4.4.2", features = ["derive"]}
convert_case = "0.6.0"
openapiv3 = "2.0.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"

[dev-dependencies]
tempfile = "3"
